<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_margin="16dp">
        <TextView
            android:id="@+id/ingrediant"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:textSize="18dp"

            android:gravity="center"
            android:layout_margin="16dp">


        </TextView>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerSteps">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>