<resources>
    <string name="app_name">Baking App</string>
    <string name="next_button"> Next</string>
    <string name="previous_button"> Previous</string>
    <string name="title_step_list">Steps</string>
    <string name="title_step_detail">step Detail</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
